--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,10 @@
-.App {
-  text-align: center;
+html {
+  margin: 1%;
 }
+
+/* .App {
+  text-align: center;
+} */
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
@@ -34,6 +38,7 @@
 
 .photo {
   margin-top: 2%;
+  padding-bottom: 20%;
   width: 40%;
   height: 40%;
 }
