--- a/src/App.css
+++ b/src/App.css
@@ -42,3 +42,14 @@ html {
   width: 40%;
   height: 40%;
 }
+
+.header {
+  font-size: 62.5%;
+  font-size: 3rem;
+}
+
+.date {
+  font-size: 62.5%;
+  font-size: 1.5rem;
+  margin-bottom: 3%;
+}
